ΜΑΘΗΜΑΤΑ/ΗΥ-340/PROJECTS/Compiler_Exec/examples/phase_2/Errors/Error7.asc
function foo(){
   x=0;
}
foo = 4;	//Using ProgramFunc as an lvalue
print = foo;	//Using LibFunc as an lvalue
++print;	//Using LibFunc as an lvalue
foo--;		//Using ProgramFunc as an lvalue
